# ai-music-transcription

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
examples/: Example.xml  Example_BrassDuet.xml  Example_Trombone.xml  Example_Trumpet.xml
src/ai_music_transcription/: __init__.py  brass_arranger.py
src/transcriber/: __init__.py  brass_arranger.py
tests/: __init__.py  test_brass_arranger.py
